<resources>
    <string name="app_name">Conociendo Muskiz</string>
    <string name="title_activity_maps">Muskiz ezagutzen!</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="hintUser">Usuario</string>
    <string name="hintClase">Clase</string>
    <string name="start">Inicio</string>
    <string name="othersUsers">Partidas guardadas:</string>
    <string name="eresProfesor"><u>SI ERES PROFESOR/A, PULSA AQUI</u></string>
    <string name="partidaguardada">Pulsa para continuar esta partida</string>
    <string name="final_score">Tu puntuación final es</string>
    <string name="frase_correcta">Bien hecho!</string>
    <string name="frase_repetida">Encuentra algo mas</string>
    <string name="frase_incorrecta">No esta vez</string>
    <string name="modes">Modos</string>
    <string name="puntuation">Puntuacion</string>
    <string name="others">Otros…</string>
    <string name="freeMode">Modo libre</string>
    <string name="guidedMode">Modo guiado</string>
    <string name="profesorMode">Modo profesor/a</string>
    <string name="yourProgress">Tu progreso</string>
    <string name="ranking">Ranking</string>
    <string name="aboutUs">Sobre nosotros</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="progressPuntuation">Tu puntuacion</string>
    <string name="gamesDone">Juegos Completados</string>
    <string name="gameLaArenaHondartza">Playa de la Arena</string>
    <string name="cardsMatch">¡Correcto!</string>
    <string name="gameHermitaDePobeña">Hermita de Pobeña</string>
    <string name="gameFundicion">Fundicion de Pobeña</string>
    <string name="gameCastilloMuñatones">Castillo de Muñatones</string>
    <string name="explanationCastilloMuñatones">El Castillo de Muñatones se encuentra en Muskiz, Bizkaia.
        Aunque se llama castillo, es una casa torre, que fue construido en 1339, cabe señalar que no se trata de una torre cualquiera, sino la de Lope García de Salazar,
        Una de las personalidades más destacadas de la Edad Media de Bizkaia. \n\n
        El actual castillo de Muñatones fue construido y destruido a lo largo de los siglos,
        con todo tipo de victorias y derrotas.\n\n
        Hoy, castillo de Muñatones
        Es el único castillo de Bizkaia que ha conservado la mayor parte de las características de su época.</string>
    <string name="gameItsaslurIbilbidea">Paseo de Itsaslur</string>
    <string name="waiting">Esperando</string>
    <string name="waitingExplanation">Hay que esperar a que el/la profesor/a termine de dar la explicacion</string>
    <string name="itsaslurQ1">¿Por donde hemos entrado al paseo?</string>
    <string name="itsaslurQ2">¿Qué hemos visto en el paseo?</string>
    <string name="itsaslurQ3">¿Qué hemos encontrado a la mitad del camino?</string>
    <string name="itsaslurQ4">¿Donde podemos darnos un baño?</string>
    <string name="gameSanJuan">Noche de San Juan</string>
    <string name="explanationSanJuan">La víspera de San Juan es conocida como el día más corto del año, aunque en realidad la fecha real de hoy en dia es el 21 de junio.
        ¿Cuándo se celebra el solsticio de verano? La adaptación que hizo el cristianismo explica que no coincide con el solsticio de verano. Esta noche con San Juan
        se festejará, el fuego lo quema todo, se desea el fuego y se dará la bienvenida al verano. Además de ser un día mágico, también puede ahuyentar malos espíritus o lo sucedido
        rompiendo con las cosas malas.En el pasado, estos fuegos se encendían para dar más poder al sol y así extender la luz.
        En el pasado, se celebraba como una fiesta pagana, ya que el sol era considerado un dios. Con la llegada del cristianismo, la celebración cambió, pero nunca perdió su esencia.
        Hoy en día se mezclan tradición y rituales, y cada uno celebra como quiere, bailando alrededor del fuego, saltando sobre él, disfrutando de la noche.
        El origen de esta fecha es el día del nacimiento de San Juan Bautista, ya que su padre Zacarías mandó encender un fuego para anunciar el nacimiento de su hijo.
        En Muskiz tiene gran importancia la bajada de las antorchas, que se inicia en la estación a las 22:30. Luego, alrededor de las 23:30, comienzan los fuegos artificiales, seguidos de una verbena.
        Esa noche, las personas que acuden a Muskiz encienden antorchas hasta el antiguo almacén de Petronor, junto con los silbadores, y luego arrojan las antorchas a la hoguera de San Jorge.</string>
    <string name="congratulations1">¡Lo hiciste, compa!</string>
    <string name="congratulations2">Has resuelto el desafio</string>
    <string name="GoToMap">Ir al mapa</string>
    <string name="explicacion1">¡Completa los juegos para conseguir insignias!</string>
    <string name="gamePuenteRomano">Puente Romano de Pobeña</string>
    <string name="Continue">Continuar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="puente_romano_enunciado_1">El puente románico de El Pobal conduce a la ferrería de El Pobal, sobre el río Barbadun. Fue construido en el siglo XIII., y Muskiz era el puente más antiguo de la ciudad.</string>
    <string name="puente_romano_enunciado_2">El río Barbadun pasaba por el centro de Muskize, por lo que tuvieron que construir un puente para poder moverse por el pueblo sin ningún problema. Gracias a ello, la gente podía viajar desde Galdames y Sopuerta hasta Muskiz. Este puente era necesario por problemas demográficos.</string>
    <string name="puente_romano_enunciado_3">El puente está hecho de piedra. Tenía dos ojos arqueados, pero hoy en día solo tiene uno, ya que el otro se hundió en las Guerras Carlistas, y hoy se ha construido una pasarela de hormigón en su lugar. Tiene aproximadamente dos metros de ancho y no tiene paredes protectoras. Para evitar que el puente se caiga, se construyó un gran pilar. Todavía hoy es transitable, pero hace mucho que no se usa.</string>
    <string name="puente_romano_preg_1">¿En qué siglo se construyó el puente románico del Pobal?</string>
    <string name="puente_romano_preg_2">¿Qué río cruza este puente?</string>
    <string name="puente_romano_preg_3">¿Para qué se construyó este puente?</string>
    <string name="puente_romano_preg_4">¿De qué está hecho el puente?</string>
    <string name="puente_preg_1_res_1">Siglo III.</string>
    <string name="puente_preg_1_res_2">Siglo XIII., el mas antiguo de Muskiz</string>
    <string name="puente_preg_1_res_3">Siglo XX.</string>
    <string name="puente_preg_2_res_1">Rio Barbudo</string>
    <string name="puente_preg_2_res_2">Rio Nervión</string>
    <string name="puente_preg_2_res_3">Rio kadagua</string>
    <string name="puente_preg_3_res_1">Se construyo como decoración</string>
    <string name="puente_preg_3_res_2">Para que los animales puedan pasar</string>
    <string name="puente_preg_3_res_3">Para que las personas de Sopuerta y Galdames puedan ir a Muskiz</string>
    <string name="puente_preg_4_res_1">Madera</string>
    <string name="puente_preg_4_res_2">Piedra</string>
    <string name="puente_preg_4_res_3">Hierro</string>
    <string name="reiniciar_juego">Reiniciar</string>
    <string name="jugar">Jugar</string>
    <string name="volver">Volver</string>
    <string name="incorrecto">Incorrecto</string>
    <string name="mar_tranquilo">Tranquilo</string>
    <string name="mar_revuelto">Revuelto</string>
    <string name="upv1">Uxue Cerrada</string>
    <string name="upv2">Irati Bargos</string>
    <string name="upv3">Oihane Baz</string>
    <string name="upv4">Aitor del Pozo</string>
    <string name="tx1">Jon Gonzalez</string>
    <string name="tx2">Eder Torres</string>
    <string name="tx3">Daniel Diez</string>
    <string name="tx4">Youssef Ait</string>
    <string name="DescripcionCastillo">El castillo de Muñatones en Muskiz (Vizcaya, España) se eleva dominando los prados y las marismas que, a su encuentro con el mar, conforman el río Barbadún (o Mayor) y sus arroyos afluentes, caso del río Cotorrio.</string>
    <string name="DescripcionLaarena">La playa de La Arena situada entre los municipios vizcaínos de Zierbena y Muskiz, País Vasco (España), es una playa con arena oscura, al lado de la desembocadura del río Barbadún, junto a las localidades de La Arena (Ciérvana) y Pobeña (Muskiz).</string>
    <string name="Descripcionermita">Las atalayas y puestos de señeros eran infraestructuras muy sencillas.\n\n
    La ermita-atalaya de Nuestra Señora del Socorro, se ubica sobre un pequeño promontorio dominando la desembocadura del Barbadún.
        La ermita de Pobeña, de gran devoción marinera, se puede datar entre los siglos XVII y XVIII</string>
    <string name="Descripcionitzalsur">La vía verde de Itsaslur, conocida popularmente como el paseo de Itsaslur, une los núcleos urbanos de Pobeña y Kobaron creando uno de los paseos más bonitos de Bizkaia.\n\n
        Un recorrido familiar, que, debido a su belleza atrae a miles de personas al año.</string>
    <string name="DescripcionSanjuan">La Fiesta de San Juan, también llamada víspera de San Juan o Noche de San Juan, es la víspera de la celebración previa a la festividad cristiana del nacimiento de San Juan Bautista el día 24 de junio. Algunos vinculan la festividad o algunas de sus celebraciones en ritos de origen pagano previos o ajenos al cristianismo. La realización de hogueras suele ser un elemento habitual.</string>
    <string name="IrPuzzle">Ir al puzzle</string>
    <string name="Marinero1">Las torres de vigilancia y los postes de señalización eran estructuras muy sencillas, y en particular la de Pobeña, fueron creadas entre el siglo XVI. y XVIII. Además de atender las necesidades de los mejillones, este mirador servía de pesca para gestionar el tráfico comercial con el mineral de hierro de las minas de Somorrostro y el hierro de las ferrerías del río Barbadún, con la ayuda de los pequeños barcos que transitaban .</string>
    <string name="Nosotros">Somos un grupo de alumn@s de Magisterio de la UPV. Junto a un grupo de alumnos del CIFP Txurdinaga hemos llevado a cabo una aplicación para los niñ@s de primaria de Muskiz puedan conozer jugando.</string>
    <string name="Desarrollo">Desarrollo por:</string>
    <string name="Idea">Ideada por:</string>
    <string name="DescProf">Zona para que el profesor/a pueda visualizar las respuestas de algunos juegos. Por último va a ser el/la encargad@ de controlar algun que otro de los juegos.</string>
    <string name="ResButPuente">Ir al puente romano</string>
    <string name="ResButPaseo">Ir a itsaslur</string>
    <string name="ResButCastillo">Ir al castillo</string>
    <string name="ResButHermita">Ir a la hermita</string>
    <string name="Comprobar">Comprobar</string>
    <string name="ResTxtCas">La imagen final del puzle debe ser el castillo. Asi es como se deberia ver:</string>
    <string name="ResTxtHermita">Las soluciones al juego estan divididas en: mar revuelto y tranquilo, aqui estan las soluciones a las diferentes fotos:</string>
    <string name="ResRevuelto">Mar revuelto:</string>
    <string name="ResTranquilo">Mar tranquilo:</string>
    <string name="Marinero2">La ermita de Nuestra Señora del Socorro fue construida en 1768 y está situada cerca de la desembocadura del río Barbadun. La llaman Nuestra Señora del Socorro porque la usaban cuando había peligro para pedir ayuda, lo que la convertía en una de las favoritas de los marineros de Pobeña, que siempre estaban en el mar cuando iban a pescar. Por eso, antes de empezar a pescar, las barcas se detenían allí, subían a pedir protección y comprobaban el estado del mar, para decidir si convenía embarcar o no.</string>
    <string name="Bienvenido">¡Bienvenido a Muskiz!</string>
    <string name="CrearSala">¡Ha llegado el momento de crear una sala para que tus alumnos se unan!</string>
</resources>