<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profesor.PuenteRespuestas">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E69BFF94"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/puente_romano_preg_1"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:text="@string/puente_preg_1_res_2"
            android:textAlignment="textEnd"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="5sp"
            android:text="@string/puente_romano_preg_2"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:text="@string/puente_preg_2_res_1"
            android:textAlignment="textEnd"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="5sp"
            android:text="@string/puente_romano_preg_3"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:text="@string/puente_preg_3_res_3"
            android:textAlignment="textEnd"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="5sp"
            android:text="@string/puente_romano_preg_4"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:text="@string/puente_preg_4_res_2"
            android:textAlignment="textEnd"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>